--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,13 @@ html {
 }
 
 #root {
-  font-family: "DM Sans", sans-serif;
+  font-family: "Inter", sans-serif;
   line-height: 1.5;
   font-weight: 400;
   /* display: flex; */
-  /* flex-direction: column;
-  justify-content: center; */
+  /* flex-direction: column; */
+  /* justify-content: center; */
+  /* align-items: center; */
   gap: 40px;
   margin: 48px 24px;
 }
