--- a/src/components/Home/Galery.module.css
+++ b/src/components/Home/Galery.module.css
@@ -47,9 +47,12 @@ input::placeholder {
   display: flex;
   flex-wrap: wrap;
   margin: 48px 96px;
-  /* display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr)); */
   gap: 24px;
+  justify-content: center;
+}
+
+.pContainer {
+  flex-grow: 1;
 }
 
 .parentContainer {
