--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -61,10 +61,26 @@ button.formBtn {
   font-weight: 600;
   line-height: 1.2;
   color: #0e73f5;
+  text-align: center;
 }
 
 .subHeading {
   font-size: 24px;
   font-weight: 600;
   color: #4f4f4f;
+}
+
+/* media query */
+@media (max-width: 600px) {
+  .container {
+    gap: 56px;
+  }
+
+  .headerContainer {
+    gap: 16px;
+  }
+
+  .heading {
+    font-size: 32px;
+  }
 }
