--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -4,14 +4,14 @@ input.login {
   font-size: 16px;
   font-weight: 400;
   background-color: #fff;
-  color: #8d8c8c;
+  color: #a7a7a7;
   padding: 12px 16px;
 }
 
 input::placeholder {
   font-size: 16px;
   font-weight: 400;
-  color: #e8e8e8;
+  color: #bbbbbb;
 }
 
 form {
@@ -31,7 +31,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 24px;
+  gap: 40px;
   max-width: 500px;
 
   margin: auto;
@@ -68,6 +68,10 @@ button.formBtn {
   font-size: 24px;
   font-weight: 600;
   color: #4f4f4f;
+}
+
+.error {
+  color: #c50000;
 }
 
 /* media query */
