--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
-body {
-  margin: 0;
+html {
 }
 
-html {
+body {
+  margin: 0;
+  box-sizing: border-box;
   background-color: #dedede;
 }
 
@@ -10,10 +11,4 @@ html {
   font-family: "Inter", sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* justify-content: center; */
-  /* align-items: center; */
-  gap: 40px;
-  margin: 64px 24px;
 }
