--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 html {
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   box-sizing: border-box;
@@ -11,6 +15,34 @@ body {
   font-family: "Inter", sans-serif;
   line-height: 1.5;
   font-weight: 400;
+}
+
+button {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  width: 100%;
+  height: 100%;
+  padding: 12px 24px;
+  border-radius: 6px;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+input {
+  width: 100%;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 16px;
+  font-weight: 400;
+  color: #676767;
+  padding: 8px;
 }
 
 input::placeholder {
