--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,8 @@ button {
   justify-content: center;
   gap: 8px;
   width: 100%;
-  height: 100%;
+  height: 40px;
+  max-height: 100%;
   padding: 12px 24px;
   border-radius: 6px;
   border: none;
