worked on button style when input is empty

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -9,3 +9,12 @@
   color: #0e73f5;
   padding: 8px 24px;
 }
+
+.active {
+  pointer-events: all;
+}
+
+.disable {
+  pointer-events: none;
+  background-color: #67a9ff;
+}
