--- a/src/index.css
+++ b/src/index.css
@@ -43,11 +43,16 @@ input {
   font-size: 16px;
   font-weight: 400;
   color: #676767;
-  padding: 8px;
+  padding: 12px;
 }
 
 input::placeholder {
   font-size: 16px;
   font-weight: 400;
   color: #bbbbbb;
+}
+
+p {
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
