--- a/src/components/InputField/InputField.module.css
+++ b/src/components/InputField/InputField.module.css
@@ -1,7 +1,7 @@
 .inputField {
   width: 100%;
   border-radius: 8px;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   background-color: #fff;
   color: #676767;
