--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -17,7 +17,7 @@
 }
 
 .heading {
-  font-size: 48px;
+  font-size: 3rem;
   font-weight: 600;
   line-height: 1.2;
   color: #0e73f5;
@@ -25,7 +25,7 @@
 }
 
 .subHeading {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 600;
   color: #4f4f4f;
 }
@@ -48,7 +48,7 @@ form {
   padding: 8px;
   border-radius: 6px;
   color: #c50000;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 600;
   text-align: center;
   max-width: 460px;
@@ -65,7 +65,7 @@ form {
   }
 
   .heading {
-    font-size: 32px;
+    font-size: 2rem;
   }
 
   .error {
