--- a/src/index.css
+++ b/src/index.css
@@ -40,14 +40,14 @@ input {
   border: none;
   outline: none;
   background: none;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   color: #676767;
   padding: 12px;
 }
 
 input::placeholder {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   color: #bbbbbb;
 }
